fix line too long on big screen for CV

--- a/assets/styles/myCss.scss
+++ b/assets/styles/myCss.scss
@@ -366,8 +366,9 @@ p {
 }
 
 .education-work {
-    max-width: 1024px;
+    max-width: 750px;
     margin-right: 15px;
+    margin-left:15px;
     a {
         color: #4f8f00;
     }
